@@ -3,6 +3,9 @@
 
 version 2.0.14:
 	- [x86] movbe, invept, invvpid
+	- [eval] better help
+	- [eval] last result (symbol _)
+	- [eval] u8, u16 etc. for current byte, word..
 
 version 2.0.13:
 	- [win32] optimize redrawing (reduce flicker)
